--- a/front/learnMap/materie/logica.html
+++ b/front/learnMap/materie/logica.html
@@ -10,8 +10,6 @@
 			img {
 				background-size: cover;
 				height: 500px;
-				overflow: hidden;
-				margin: 0px;
 			}
 			.bg-text {
 				background-color: rgba(0, 0, 0, 0.5);
@@ -19,52 +17,42 @@
 		</style>
 	</head>
 	<body>
-		Carosello moduli logica con link alle pagine dei moduli
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
 				<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
 				<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
 			</ol>
-			<div class="carousel-inner">
+			<div
+				class="carousel-inner"
+				style="border-radius: 1em; border-color: blue; border-style: solid; height: 500px;"
+			>
 				<div class="carousel-item active">
-					<img
-						src="materie/logica1.jpg"
-						width="42"
-						height="402"
-						class="d-block w-100"
-						alt="..."
-					/>
-					<div class="carousel-caption d-none d-md-block bg-text">
+					<a href="../moduli/qi/intro/intro.html">
+						<img src="materie/logica1.jpg" class="w-100" alt="..." />
+					</a>
+					<div class="carousel-caption bg-text">
 						<h5>Principiante/tipologia</h5>
 						<p>cosa si può fare nella fase 2?</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img
-						src="materie/logica2.png"
-						width="42"
-						height="402"
-						class="d-block w-100"
-						alt="..."
-					/>
-					<div class="carousel-caption d-none d-md-block bg-text">
-						<h5>intermedio</h5>
-						<p>paragrafo per spiegare o boh non so</p>
-					</div>
+					<a href="../moduli/qi/intro/intro2.html">
+						<img src="materie/logica2.png" class="w-100" alt="..." />
+						<div class="carousel-caption bg-text">
+							<h5>intermedio</h5>
+							<p>paragrafo per spiegare o boh non so</p>
+						</div>
+					</a>
 				</div>
 				<div class="carousel-item">
-					<img
-						src="materie/img3.jpg"
-						width="42"
-						height="402"
-						class="d-block w-100"
-						alt="..."
-					/>
-					<div class="carousel-caption d-none d-md-block bg-text">
-						<h5>avanzato</h5>
-						<p>magna meno e vivi meglio</p>
-					</div>
+					<a href="../moduli/qi/intro/intro3.html">
+						<img src="materie/img3.jpg" class="w-100" alt="..." />
+						<div class="carousel-caption bg-text">
+							<h5>avanzato</h5>
+							<p>magna meno e vivi meglio</p>
+						</div>
+					</a>
 				</div>
 			</div>
 			<a
