--- a/front/learnMap/materie/python.html
+++ b/front/learnMap/materie/python.html
@@ -17,34 +17,42 @@
 		</style>
 	</head>
 	<body>
-		Carosello moduli python con link alle pagine dei moduli
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
 				<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
 				<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
 			</ol>
-			<div class="carousel-inner">
+			<div
+				class="carousel-inner"
+				style="border-radius: 1em; border-color: blue; border-style: solid; height: 500px;"
+			>
 				<div class="carousel-item active">
-					<img src="materie/img3.jpg" class="d-block w-100" />
-					<div class="carousel-caption d-none d-md-block bg-text">
-						<h5>First slide label</h5>
-						<a href="http://www.google.it">roba a cazzo che non so</a>
-					</div>
+					<a href="../moduli/programmazione/basi/introprog.html">
+						<img src="materie/img3.jpg" class="w-100" />
+						<div class="carousel-caption bg-text">
+							<h5>First slide label</h5>
+							<a href="http://www.google.it">roba a cazzo che non so</a>
+						</div>
+					</a>
 				</div>
 				<div class="carousel-item">
-					<img src="materie/img2.jpeg" class="d-block w-100" />
-					<div class="carousel-caption d-none d-md-block bg-text">
-						<h5>Second slide label</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-					</div>
+					<a href="../moduli/programmazione/basi/introprog.html">
+						<img src="materie/img2.jpeg" class="w-100" />
+						<div class="carousel-caption bg-text">
+							<h5>Second slide label</h5>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+						</div>
+					</a>
 				</div>
 				<div class="carousel-item">
-					<img src="materie/img1.jpg" class="d-block w-100" />
-					<div class="carousel-caption d-none d-md-block bg-text">
-						<h5>Third slide label</h5>
-						<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-					</div>
+					<a href="../moduli/programmazione/basi/introprog.html">
+						<img src="materie/img1.jpg" class="w-100" />
+						<div class="carousel-caption bg-text">
+							<h5>Third slide label</h5>
+							<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+						</div>
+					</a>
 				</div>
 			</div>
 			<a
