--- a/front/learnMap/materie/statistica.html
+++ b/front/learnMap/materie/statistica.html
@@ -19,55 +19,44 @@
 		<link rel="stylesheet" href="../../assets/css/home-made.css" />
 		<script src="../../jQuery/jquery.min.js"></script>
 		<script src="../../assets/js/bootstrap.js" lang="--js"></script>
-		<style>
-			img {
-				background-size: cover;
-				height: 500px;
-			}
-		</style>
 	</head>
 	<body>
-		Carosello moduli statistica con link alle pagine dei moduli (funziona solo il primo)
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
 				<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
 				<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
 			</ol>
-			<div class="carousel-inner">
+			<div
+				class="carousel-inner"
+				style="border-radius: 1em; border-color: blue; border-style: solid; height: 500px;"
+			>
 				<div class="carousel-item active">
 					<a href="../moduli/statistica/intro/intro.html">
-						<img
-							src="materie/introStatistica.jpg"
-							height="500px"
-							class="d-block w-100"
-							alt="..."
+						<img src="materie/introStatistica.jpg" class="w-100" alt="..."
 					/></a>
-					<div class="carousel-caption d-none d-md-block text-light bg-text">
+					<div class="carousel-caption text-light bg-text">
 						<h5>Introduzione</h5>
 						<p>Un introduzione generale alla statistica e alla sua storia</p>
 					</div>
 				</div>
 				<div class="carousel-item">
 					<a href="../moduli/statistica/base/base.html">
-						<img
-							src="materie/basestatistica.png"
-							height="500px"
-							class="d-block w-100"
-							alt="..."
-						/>
+						<img src="materie/basestatistica.png" class="w-100" alt="..." />
 					</a>
-					<div class="carousel-caption d-none d-md-block text-light bg-text">
+					<div class="carousel-caption text-light bg-text">
 						<h5>Base</h5>
 						<p>Un primo approccio all'uso nella vita comune</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img src="materie/img3.jpg" height="500px" class="d-block w-100" alt="..." />
-					<div class="carousel-caption d-none d-md-block text-light bg-text">
-						<h5>Formule!</h5>
-						<p>magna meno e vivi meglio</p>
-					</div>
+					<a href="../moduli/statistica/adv/adv.html">
+						<img src="materie/img3.jpg" class="w-100" alt="..." />
+						<div class="carousel-caption text-light bg-text">
+							<h5>Grafici</h5>
+							<p>Come leggere, distinguere, interpretare i vari tipi di grafici</p>
+						</div>
+					</a>
 				</div>
 			</div>
 			<a
