--- a/front/moduli/statistica/base/basetest.html
+++ b/front/moduli/statistica/base/basetest.html
@@ -49,7 +49,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-						<a id="home" class="nav-link" href="../../../learnMap/learnMap.html"
+						<a id="home" class="nav-link" href="../../../learnMap/learnMap.php"
 							>LearnMap <span class="sr-only">(current)</span></a
 						>
 					</li>
