--- a/front/paginaRegistrazione/registrazione.html
+++ b/front/paginaRegistrazione/registrazione.html
@@ -77,7 +77,13 @@
 						<tr>
 							<label for="bassword">Conferma </label>
 							<input type="password" name="bassword" value="" id="bassword" />
-							<input type="submit" name="Submit" />
+						</tr>
+
+						<tr>
+							<div class="align-content-between">
+								<input class="btn btn-primary" type="submit" name="Submit" />
+								<input class="btn btn-primary" type="reset" name="Reset" />
+							</div>
 						</tr>
 					</table>
 				</div>
