--- a/front/learnMap/materie/statistica.html
+++ b/front/learnMap/materie/statistica.html
@@ -15,10 +15,10 @@
 				background-color: rgba(0, 0, 0, 0.5);
 			}
 		</style>
-		<link rel="stylesheet" href="../../assets/css/bootstrap.css" />
-		<link rel="stylesheet" href="../../assets/css/home-made.css" />
-		<script src="../../jQuery/jquery.min.js"></script>
-		<script src="../../assets/js/bootstrap.js" lang="--js"></script>
+		<link rel="stylesheet" href="../assets/css/bootstrap.css" />
+		<link rel="stylesheet" href="../assets/css/home-made.css" />
+		<script src="../assets/js/jquery.min.js"></script>
+		<script src="../assets/js/bootstrap.js" lang="--js"></script>
 	</head>
 	<body>
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
