--- a/front/moduli/statistica/adv/advtest.html
+++ b/front/moduli/statistica/adv/advtest.html
@@ -76,6 +76,11 @@
 			</div>
 		</nav>
 		<br /><br /><br />
-		<div class="container bg-blur text-monospace"></div>
+		<div class="container bg-blur text-monospace">
+			<div>
+				Dovrai leggere i grafici, riconoscere che tipo di grafici sono rispondere alle
+				domande
+			</div>
+		</div>
 	</body>
 </html>
