--- a/front/moduli/statistica/adv/adv.html
+++ b/front/moduli/statistica/adv/adv.html
@@ -111,7 +111,11 @@
 				il mouse il riquadro che ti interessa
 			</div>
 			<div id="app"></div>
+			<a class="" href="advtest.html"
+				><button style="padding: 1em; margin: auto;">Vai al test</button></a
+			>
 		</div>
+
 		<script src="adv.js"></script>
 	</body>
 </html>
