--- a/front/moduli/qi/quiz_qi/quiz_qi.html
+++ b/front/moduli/qi/quiz_qi/quiz_qi.html
@@ -65,7 +65,7 @@
 						Profilo
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Impostazioni</a>
+						<a class="dropdown-item" href="/front/profilo.php">Impostazioni</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="#">Globa</a>
 					</div>
