--- a/front/moduli/statistica/base/base.html
+++ b/front/moduli/statistica/base/base.html
@@ -68,9 +68,9 @@
 						Profilo
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Impostazioni</a>
+						<a class="dropdown-item" href="/front/profilo.php">Impostazioni</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="/front/profilo.php">Profilo</a>
+						<a class="dropdown-item" href="/front/index.php#footer">Suggerimenti</a>
 					</div>
 				</ul>
 			</div>
